--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
     "@tauri-apps/api": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -22,6 +24,8 @@
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.5",
     "unocss": "^0.51.12",
-    "vite": "^4.2.1"
+    "unplugin-icons": "^0.16.1",
+    "vite": "^4.2.1",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
