--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
+    "@fluentui/react-context-selector": "^9.1.19",
     "@headlessui/react": "^1.7.14",
     "@tauri-apps/api": "^1.3.0",
+    "@unocss/reset": "^0.51.12",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "use-context-selector": "^1.4.1",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.3.0",
